kubernetes/apps/longhorn/ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-http-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - longhorn-ui.house
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
